log/build_2023-01-17_10-53-58/yolov5_ros/stdout_stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/dist.py:726: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt)
running develop
/usr/local/lib/python3.6/dist-packages/setuptools/command/easy_install.py:159: EasyInstallDeprecationWarning: easy_install command is deprecated. Use build and pip and other standards-based tools.
  EasyInstallDeprecationWarning,
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
/usr/local/lib/python3.6/dist-packages/setuptools/dist.py:726: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt)
running egg_info
writing ../../../build/yolov5_ros/yolov5_ros.egg-info/PKG-INFO
writing dependency_links to ../../../build/yolov5_ros/yolov5_ros.egg-info/dependency_links.txt
writing entry points to ../../../build/yolov5_ros/yolov5_ros.egg-info/entry_points.txt
writing requirements to ../../../build/yolov5_ros/yolov5_ros.egg-info/requires.txt
writing top-level names to ../../../build/yolov5_ros/yolov5_ros.egg-info/top_level.txt
reading manifest file '../../../build/yolov5_ros/yolov5_ros.egg-info/SOURCES.txt'
writing manifest file '../../../build/yolov5_ros/yolov5_ros.egg-info/SOURCES.txt'
running build
running build_py
copying yolov5_ros/New_yolo_ros_detect.py -> /tmp/.X11-unix/ROS2_final_Thesis/build/yolov5_ros/build/lib/yolov5_ros
running install
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
running install_lib
copying /tmp/.X11-unix/ROS2_final_Thesis/build/yolov5_ros/build/lib/yolov5_ros/New_yolo_ros_detect.py -> /tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/python3.6/site-packages/yolov5_ros
byte-compiling /tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/python3.6/site-packages/yolov5_ros/New_yolo_ros_detect.py to New_yolo_ros_detect.cpython-36.pyc
  File "/tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/python3.6/site-packages/yolov5_ros/New_yolo_ros_detect.py", line 500
    self.br = CvBridge()
       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/python3.6/site-packages/yolov5_ros-0.2.0-py3.6.egg-info' (and everything under it)
Copying ../../../build/yolov5_ros/yolov5_ros.egg-info to /tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/python3.6/site-packages/yolov5_ros-0.2.0-py3.6.egg-info
running install_scripts
Installing New_trt script to /tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/yolov5_ros
Installing yolov5_ros script to /tmp/.X11-unix/ROS2_final_Thesis/install/yolov5_ros/lib/yolov5_ros
writing list of installed files to '/tmp/.X11-unix/ROS2_final_Thesis/build/yolov5_ros/install.log'
